php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #45792 bz2 compressed files in zip failure
Submitted: 2008-08-12 02:55 UTC Modified: 2008-08-21 05:17 UTC
From: cellog@php.net Assigned: cellog (profile)
Status: Closed Package: PHAR related
PHP Version: 5.3CVS-2008-08-12 (CVS) OS: linux
Private report: No CVE-ID: None
 [2008-08-12 02:55 UTC] cellog@php.net
Description:
------------
a zip archive created with info-zip using bzip2 compression is not properly processed by phar.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-08-18 21:51 UTC] cellog@php.net
significant progress - I've got this working for the described test case.  The largest problem was that the zip header was not checked for validity when opening an internal zip file, and local header can have a different offset than the central header (stupid design flaw of ZIP file format).  The fix must be ported to conversion convertTo*() and a few other places prior to commit.
 [2008-08-21 05:17 UTC] cellog@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 01 17:00:01 2026 UTC