fix bug #45792: bz2 compressed files in zip failure