ext/phar/util.c
@@ -913,12 +913,17 @@ int phar_open_entry_fp(phar_entry_info *entry, char **error, int follow_links TS
 	char *filtername;
 	off_t loc;
 	php_stream *ufp;
+	phar_entry_data dummy;
 
 	if (follow_links && entry->link) {
 		phar_entry_info *link_entry = phar_get_link_source(entry TSRMLS_CC);
 		if (link_entry && link_entry != entry) {
 			return phar_open_entry_fp(link_entry, error, 1 TSRMLS_CC);
 		}
+	}
+
+	if (entry->is_modified) {
+		return SUCCESS;
 	}
 
 	if (entry->fp_type == PHAR_TMP) {
@@ -941,6 +946,13 @@ int phar_open_entry_fp(phar_entry_info *entry, char **error, int follow_links TS
 	}
 
 	if ((entry->old_flags && !(entry->old_flags & PHAR_ENT_COMPRESSION_MASK)) || !(entry->flags & PHAR_ENT_COMPRESSION_MASK)) {
+		dummy.internal_file = entry;
+		dummy.phar = phar;
+		dummy.zero = entry->offset;
+		dummy.fp = phar_get_pharfp(phar TSRMLS_CC);
+		if (FAILURE == phar_postprocess_file(&dummy, entry->crc32, error, 1 TSRMLS_CC)) {
+			return FAILURE;
+		}
 		return SUCCESS;
 	}
 
@@ -950,6 +962,14 @@ int phar_open_entry_fp(phar_entry_info *entry, char **error, int follow_links TS
 			spprintf(error, 4096, "phar error: Cannot open temporary file for decompressing phar archive \"%s\" file \"%s\"", phar->fname, entry->filename);
 			return FAILURE;
 		}
+	}
+
+	dummy.internal_file = entry;
+	dummy.phar = phar;
+	dummy.zero = entry->offset;
+	dummy.fp = phar_get_pharfp(phar TSRMLS_CC);
+	if (FAILURE == phar_postprocess_file(&dummy, entry->crc32, error, 1 TSRMLS_CC)) {
+		return FAILURE;
 	}
 
 	ufp = phar_get_entrypufp(entry TSRMLS_CC);
@@ -991,6 +1011,11 @@ int phar_open_entry_fp(phar_entry_info *entry, char **error, int follow_links TS
 
 	/* this is now the new location of the file contents within this fp */
 	phar_set_fp_type(entry, PHAR_UFP, loc TSRMLS_CC);
+	dummy.zero = entry->offset;
+	dummy.fp = ufp;
+	if (FAILURE == phar_postprocess_file(&dummy, entry->crc32, error, 0 TSRMLS_CC)) {
+		return FAILURE;
+	}
 	return SUCCESS;
 }
 /* }}} */
